# bmi_sdd_project

./: .gitignore  Cargo.toml  Procfile  test_graceful_shutdown.sh
specs/001-bmi-calculator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-bmi-calculator/checklists/: requirements.md
specs/001-bmi-calculator/contracts/: api.md
src/: api.rs  domain.rs  lib.rs  main.rs  ui.rs
tests/: api_integration.rs
